# medicosbr

./: Cargo.toml  Makefile
src/: main.rs
src/common/: clock.rs  error.rs  mod.rs
src/common/cqrs/: aggregate.rs  command.rs  event.rs  event_store.rs  mod.rs
src/common/es/: aggregate.rs  aggregate_id.rs  aggregate_store.rs  event.rs  mod.rs  stream.rs  test_support.rs  version.rs  versioned_event.rs  written_event.rs
src/domain/: doctors_stats.rs  doctors_stats_events.rs  mod.rs
src/domain/srag/: mod.rs  region_weekly_entry.rs  region_weekly_entry_command_handler.rs  regional_weekly_report.rs
src/domain/srag/vo/: case.rs  mod.rs  region.rs  total_reported.rs  year.rs
src/ports/: mod.rs
src/ports/medicos_1000_habitantes/: import.rs
src/ports/srag/: mod.rs  weekly.rs
