[package]
name = "medicosbr"
version = "0.1.0"
authors = ["Narciso Benigno <narciso.benigno@indebted.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"

cqrs-es = "0.0.18"
postgres-es = "0.0.18"

serde = { version = "1.0.117", features = ["derive"]}
serde_json = "1.0"

uuid = { version = "0.8", features = ["serde", "v4", "v5"] }
